# alore

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  backend.db  main.py  pyproject.toml  readme2.md
backend/: main.py
backend/agents/: __init__.py
backend/api/: debate.py  disruptions.py  news_curator.py  resolution_prep.py  supply_chain.py
backend/cache/: file_cache.py  memory_cache.py
backend/db/: connection.py  models.py  repositories.py
backend/models/: country_packet.py  debate_session.py  disruption_event.py  news_curator.py  resolution_workflow.py  supply_chain.py
backend/repositories/: __init__.py  debate_session_repository.py
backend/scheduler/: disruption_runner.py
backend/services/: country_curation_service.py  disruption_monitor_service.py  llm_curation.py  news_curator_service.py  resolution_prep_manager.py  resolution_prep_orchestrator.py  supply_chain_service.py  tinyfish_client.py
backend/utils/: __init__.py  substitute_finder.py
docs/: README.md  api-contracts.md  architecture.md  extensions.md  file-stucture.md  idea-backend.md
frontend/: api-requirements.md  index.html  package-lock.json  package.json
frontend/src/: App.css  DebateHistoryPage.jsx  SGDashboard.jsx  ScenarioPage.jsx  SentryPage.jsx  StakeholderGuidance.jsx  main.jsx
tests/unit/: test_debate_api.py  test_debate_graph_architecture.py  test_debate_orchestrator.py  test_disruption_monitor_service.py  test_disruption_repository_migration.py  test_disruptions_api.py  test_news_curator_api.py  test_news_curator_service.py  test_resolution_prep_api.py  (+5 more)
(+19 files in other folders)
